Hinzufuegen von bootstrap in die globale style datei

--- a/src/client/src/global.scss
+++ b/src/client/src/global.scss
@@ -1,5 +1,7 @@
 @import './theme/reset.scss';
 @import './theme/variables.scss';
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
 
 body {
   /**
