Navigations bar erstellt und einen Link fuer Icons in den Header hinzugefuegt

--- a/src/client/src/app/nav/nav.component.html
+++ b/src/client/src/app/nav/nav.component.html
@@ -1,10 +1,84 @@
-<div class="container">
-  nav works!
-  <!-- ToDo: navigation bar -->
-  <!--
-  <a routerLink="/" class="logo">{{appTitle}}</a>
-  <nav>
-    
-  </nav>
-  -->
+
+ 
+<div class="container-fluid">
+  <!--only visible when window is bigger than sm=540px-->
+  <div class="d-none d-sm-block">
+
+    <div class="m-6 pt-5 pb-5">
+      <ul class="nav navbar menu-web">
+        <a class="d-flex align-items-center" href="/">
+          <img src="../../assets/icon/DEC_logo.png" width="150" height="150" class="d-inline-block align-top" alt="">
+          <p class="menu-web-text">
+            DRIVING E CAR
+          </p>  
+        </a>
+        
+        <div class="btn-group justify-content-end" role="group">
+          <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+            Anmelden
+          </button>
+          <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+            Registrieren
+          </button>
+      </div>
+      </ul>
+    </div>
+
+  </div>
+
+  <!--only visible when window is smaller than sm=540px-->
+  <div class="d-inline d-sm-none">
+    <div class="container menu-container">
+      <div class="d-flex justify-content-between align-items-center">
+       
+          <a class="navbar-brand inline-block" href="#">
+            <img src="../../assets/icon/DEC_logo.png" width="60" height="60" class="d-inline-block align-top" alt="">
+          </a>
+
+          <p>
+            DRIVING E CAR
+          </p>
+
+          <button type="button" class="btn btn-outline-secondary" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+            <div *ngIf="isCollapsed == true">
+              <i class="material-icons md-36">menu</i>
+            </div>
+            <div *ngIf="isCollapsed == false">
+                <i class="material-icons md-36">cancel</i>
+            </div>
+          </button>
+
+      </div>
+    </div>
+    <div id="collapseExample" [ngbCollapse]="isCollapsed">
+
+      <div class="card">
+        <a href="/anmelden">
+          <div class="card-body btn-outline-secondary btn-lg" >
+            Anmelden
+          </div>
+        </a>
+        <hr class="hr-menu">
+        <a href="/regestrieren">
+          <div class="card-body btn-outline-secondary btn-lg">
+            Registrieren
+          </div>
+        </a>
+        <hr class="hr-menu">
+        <a href="/kontakt">
+          <div class="card-body btn-outline-secondary btn-lg">
+            Kontakt
+          </div>
+        </a>
+        <hr class="hr-menu">
+        <a href="/impressum">
+          <div class="card-body btn-outline-secondary btn-lg">
+            Impressum
+          </div>
+        </a>
+      </div>
+    </div>
+  <!--visible when window greater than -->
+ </div>
+ <!--container ende-->
 </div>
