temporaeres? logo hinzugefuegt und link anpassung in der navigations componente

--- a/src/client/src/app/nav/nav.component.html
+++ b/src/client/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
     <div class="m-6 pt-5 pb-5">
       <ul class="nav navbar menu-web">
         <a class="d-flex align-items-center" href="/">
-          <img src="../../assets/icon/DEC_logo.png" width="150" height="150" class="d-inline-block align-top" alt="">
+          <img src="{{logopath}}" width="150" height="150" class="d-inline-block align-top" alt="">
           <p class="menu-web-text">
             DRIVING E CAR
           </p>  
