fix von navigationsbar fuer firefox und explorer und hinzufügen von footbar zeilen zur app.module.ts

--- a/src/client/src/app/nav/nav.component.html
+++ b/src/client/src/app/nav/nav.component.html
@@ -5,23 +5,26 @@
   <div class="d-none d-sm-block">
 
     <div class="m-6 pt-5 pb-5">
-      <ul class="nav navbar menu-web">
-        <a class="d-flex align-items-center" href="/">
-          <img src="{{logopath}}" width="150" height="150" class="d-inline-block align-top" alt="">
-          <p class="menu-web-text">
-            DRIVING E CAR
-          </p>  
-        </a>
-        
-        <div class="btn-group justify-content-end" role="group">
-          <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
-            Anmelden
-          </button>
-          <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
-            Registrieren
-          </button>
-      </div>
-      </ul>
+      <nav>
+        <ul class="menu-web d-flex justify-content-between">
+
+          <a class="d-flex align-items-center" href="/">
+            <img src="{{logopath}}" width="150" height="150" class="d-inline-block align-top" alt="">
+            <p class="menu-web-text">
+              DRIVING E CAR
+            </p>  
+          </a>
+          
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+              Anmelden
+            </button>
+            <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+              Registrieren
+            </button>
+          </div>
+        </ul>
+      </nav>
     </div>
 
   </div>
