--- a/src/client/src/app/nav/nav.component.scss
+++ b/src/client/src/app/nav/nav.component.scss
@@ -12,12 +12,7 @@
     margin:0;
     padding:1em 0 0 0;
 }
-/*
-.menu-label{
-    padding-top:5em;
-}
-*/
-.menu-web{
+.menu-bar{
     height: 3em;
     background-color: #666666;
 }
@@ -30,4 +25,10 @@
 .menu-web-button:hover{
     background-color: rgb(255, 255, 255);
     color: #666666;
+}
+
+
+
+.h1-app{
+    font-size: 1.2em;
 }
