added footer fuer web

--- a/src/client/src/app/footbar/footbar.component.html
+++ b/src/client/src/app/footbar/footbar.component.html
@@ -1,3 +1,15 @@
-<p>
-  footbar works!
-</p>
+
+<div class="d-none d-sm-block">
+  <div class="container mt-5 d-flex justify-content-center ">
+    <div id="footer" class="push">
+      <div class="d-flex justify-content-around pt-1">
+        <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+          Kontakt
+        </button>
+        <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+          Impressum
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
