--- a/src/client/src/global.scss
+++ b/src/client/src/global.scss
@@ -2,11 +2,14 @@
 @import './theme/variables.scss';
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
-
+html {
+  height:100%; 
+}
 body {
   /**
    * Set global background-color (default).
    * This is necessary for mobile version. Otherwise mobile default is black.
    */
   background-color: $background-color;
+  height:100%;
 }
