--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,5 +1,10 @@
-<app-nav></app-nav>
+<div class="fill">
+  <div class="container-fluid">
+    <app-nav></app-nav>
 
-<section>
-  <router-outlet></router-outlet>
-</section>
+    <section>
+      <router-outlet></router-outlet>
+    </section>
+    <app-footbar></app-footbar>
+  </div>
+</div>
