--- a/src/client/src/app/nav/nav.component.html
+++ b/src/client/src/app/nav/nav.component.html
@@ -4,19 +4,19 @@
   <div class="d-none d-sm-block">
     <div class="m-6 pt-5 pb-5">
         <nav class="menu-bar d-flex justify-content-between align-items-center">
-          <a class="d-flex align-items-center" href="/">
+          <a class="d-flex align-items-center" routerLink="/">
             <img src="{{logopath}}" width="150" height="150" class="d-inline-block align-top" alt="">
             <h1 class="menu-text-light">
               {{navtitle}}
             </h1> 
           </a>
           <div class="btn-group" role="group">
-            <button type="button" class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button">
+            <a class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button" routerLink="/anmelden" role="button">
               Anmelden
-            </button>
-            <button type="button" class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button">
+            </a>
+            <a class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button" routerLink="/registrieren" role="button">
               Registrieren
-            </button>
+            </a>
           </div>
         </nav>
     </div>
@@ -25,19 +25,19 @@
   <!--only visible when window is smaller than sm=540px-->
   <div class="d-inline d-sm-none">
     <nav class="mt-4 d-flex justify-content-between align-items-center ">
-      <a href="/">
+      <a routerLink="/">
         <img src="{{logopath}}" width="60" height="60" class="d-inline-block align-top" alt="">
       </a>
-      <a href="/">
-        <h1 class="h1-app menu-text-dark pb-4">
+      <a routerLink="/">
+        <h1 class="h1-app menu-text-dark">
           {{navtitle}}
         </h1>  
       </a>
-      <button type="button" class="btn btn-outline-secondary" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
-        <div *ngIf="isCollapsed == true">
+      <button type="button" class="btn btn-outline-secondary d-flex justify-content-center" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+        <div *ngIf="isCollapsed == true" class="d-flex align-items-center justify-content-center">
           <i class="material-icons md-36">menu</i>
         </div>
-        <div *ngIf="isCollapsed == false">
+        <div *ngIf="isCollapsed == false" class="d-flex align-items-center justify-content-center">
             <i class="material-icons md-36">cancel</i>
         </div>
       </button>
@@ -45,25 +45,25 @@
     <hr class="hr-menu">
     <div id="collapseExample" [ngbCollapse]="isCollapsed">
       <div class="card">
-        <a href="/anmelden">
-          <div class="card-body btn-outline-secondary btn-lg" >
+        <a routerLink="/anmelden">
+          <div class="card-body btn-outline-secondary btn-lg card-size" >
             Anmelden
           </div>
         </a>
         <hr class="hr-menu">
-        <a href="/regestrieren">
+        <a routerLink="/regestrieren">
           <div class="card-body btn-outline-secondary btn-lg">
             Registrieren
           </div>
         </a>
         <hr class="hr-menu">
-        <a href="/kontakt">
+        <a routerLink="/kontakt">
           <div class="card-body btn-outline-secondary btn-lg">
             Kontakt
           </div>
         </a>
         <hr class="hr-menu">
-        <a href="/impressum">
+        <a routerLink="/impressum">
           <div class="card-body btn-outline-secondary btn-lg">
             Impressum
           </div>
