--- a/src/client/src/app/pages/anmelden/anmelden.component.html
+++ b/src/client/src/app/pages/anmelden/anmelden.component.html
@@ -1,3 +1,43 @@
+<div class="d-flex justify-content-center mt-3">
+  <div class="d-flex flex-column">
+    
+    <div class="flex-row p-3">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Name:</span>
+        </div>
+        <input type="text" class="input-anmelden form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
+      </div> 
+    </div>
+
+    <div class="flex-row p-3">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Passwort:</span>
+        </div>
+        <input type="password" class="input-anmelden form-control" placeholder="Geheimes Passwort" aria-label="Username" aria-describedby="basic-addon1" [formControl]="password" (keyup.enter)="onSubmit()"> 
+      </div>
+    </div>
+  </div>
+</div>
 <p>
-  anmelden works!
+  {{passwort}}
 </p>
+
+<div *ngIf="loginMessage">
+  <p>
+    <ngb-alert type="{{type}}" [dismissible]="false">
+      <strong>{{loginMessage}}</strong>
+    </ngb-alert>
+  </p>
+</div>
+<div class="d-flex justify-content-center mt-3">
+  <div class="d-flex flex-column">
+    <div class="flex-row p-2 d-flex justify-content-center">
+      <button class="btn btn-outline-secondary"(click)="onSubmit()">
+        Anmelden
+      </button> 
+    </div>
+  </div>
+</div> 
+   
