--- a/src/client/src/app/main/main.component.scss
+++ b/src/client/src/app/main/main.component.scss
@@ -8,6 +8,10 @@ h1 {
   color: grey;
   font-size: 1.5em;
   text-align: center;
-
 }
 
+img {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+}
