erweitern von anmelden und registrieren, anpassung von footbar und nav

--- a/src/client/src/app/app.component.scss
+++ b/src/client/src/app/app.component.scss
@@ -5,6 +5,9 @@
     height: 100%;
     //margin: 0 auto -42px; /* the bottom margin is the negative value of the footer's height */
     margin-top:0;
-    margin-bottom:-42px;
+    //margin-bottom: -42px;
     position: relative;
+}
+.test-footbar{
+    display:grid;
 }
