--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -5,6 +5,6 @@
     <section>
       <router-outlet></router-outlet>
     </section>
-    <app-footbar></app-footbar>
+    <app-footbar class="test-footbar"></app-footbar>
   </div>
 </div>
