--- a/src/client/src/app/pages/anmelden/anmelden.component.html
+++ b/src/client/src/app/pages/anmelden/anmelden.component.html
@@ -1,3 +1,4 @@
+
 <div class="d-flex justify-content-center mt-3">
   <div class="d-flex flex-column">
     
@@ -6,7 +7,8 @@
         <div class="input-group-prepend">
           <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Name:</span>
         </div>
-        <input type="text" class="input-anmelden form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
+        <!--<input type="text" class="input-anmelden form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">-->
+        <input type="text" class="input-anmelden form-control" placeholder="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
       </div> 
     </div>
 
@@ -15,7 +17,7 @@
         <div class="input-group-prepend">
           <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Passwort:</span>
         </div>
-        <input type="password" class="input-anmelden form-control" placeholder="Geheimes Passwort" aria-label="Username" aria-describedby="basic-addon1" [formControl]="password" (keyup.enter)="onSubmit()"> 
+        <input type="password" class="input-anmelden form-control" placeholder="Geheimes Passwort" aria-describedby="basic-addon1" [formControl]="password" (keyup.enter)="onSubmit()"> 
       </div>
     </div>
   </div>
@@ -24,17 +26,17 @@
   {{passwort}}
 </p>
 
-<div *ngIf="loginMessage">
+<div *ngIf="loginmessage">
   <p>
     <ngb-alert type="{{type}}" [dismissible]="false">
-      <strong>{{loginMessage}}</strong>
+      <strong>{{loginmessage}}</strong>
     </ngb-alert>
   </p>
 </div>
 <div class="d-flex justify-content-center mt-3">
   <div class="d-flex flex-column">
     <div class="flex-row p-2 d-flex justify-content-center">
-      <button class="btn btn-outline-secondary"(click)="onSubmit()">
+      <button class="btn btn-outline-secondary" (click)="onSubmit()">
         Anmelden
       </button> 
     </div>
