--- a/src/client/src/app/pages/registrieren/registrieren.component.html
+++ b/src/client/src/app/pages/registrieren/registrieren.component.html
@@ -1,3 +1,59 @@
-<p>
-  registrieren works!
-</p>
+
+<div class="d-flex justify-content-center mt-3">
+  <div class="d-flex flex-column">
+    
+    <div class="flex-row p-3">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="span-regist input-group-text" id="inputGroup-sizing-default">Name:</span>
+        </div>
+        <input type="text" class="input-regist form-control" placeholder="Username" aria-describedby="basic-addon1" [formControl]="benutzername" (keyup.enter)="onSubmit()">
+      </div> 
+    </div>
+
+    <div class="flex-row p-3">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="span-regist input-group-text" id="inputGroup-sizing-default">E-Mail:</span>
+        </div>
+        <input type="text" class="input-regist form-control" placeholder="abc@example.de" aria-describedby="basic-addon1" [formControl]="email" (keyup.enter)="onSubmit()">
+      </div> 
+    </div>
+
+    <div class="flex-row p-3">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="span-regist input-group-text" id="inputGroup-sizing-default">Passwort:</span>
+        </div>
+        <input type="password" class="input-regist form-control" placeholder="Passwort eingeben" aria-describedby="basic-addon1" [formControl]="password" (keyup.enter)="onSubmit()"> 
+      </div>
+    </div>
+
+    <div class="flex-row p-3">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="span-regist input-group-text" id="inputGroup-sizing-default">Passwort:</span>
+        </div>
+        <input type="password" class="input-regist form-control" placeholder="Passwort wiederholen" aria-describedby="basic-addon1" [formControl]="passwordConfirm" (keyup.enter)="onSubmit()"> 
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div *ngIf="registrmessage">
+  <p>
+    <ngb-alert type="{{type}}" [dismissible]="false">
+      <strong>{{registrmessage}}</strong>
+    </ngb-alert>
+  </p>
+</div>
+<div class="d-flex justify-content-center mt-3">
+  <div class="d-flex flex-column">
+    <div class="flex-row p-2 d-flex justify-content-center">
+      <button class="btn btn-outline-secondary" (click)="onSubmit()">
+        Registrieren
+      </button> 
+    </div>
+  </div>
+</div> 
