--- a/src/client/src/app/main/main.component.html
+++ b/src/client/src/app/main/main.component.html
@@ -7,11 +7,12 @@
     </div>
   </div>
 
-  <!--Bilderkarusell -->
+  <!--Bilderkarussell -->
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <ngb-carousel *ngIf="images">
+
           <ng-template ngbSlide>
             <div class="col-xs-4"><a href="#1"><img [src]="images[0]"
                                                     class="img-responsive"></a></div>
@@ -23,11 +24,7 @@
 
           <ng-template ngbSlide>
 
-            <!--
-             <li *ngFor="let image of images">
-               {{ images }}
-             </li>
-            -->
+           
 
             <div class="col-xs-4"><a href="#1"><img [src]="images[3]"
                                                     class="img-responsive"></a></div>
@@ -44,43 +41,15 @@
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
+
 <!--Filter -->
-
 <div class="container">
-
-  <div class="row">
-    
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+  <div class="row" *ngIf="filters">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center" *ngFor="let filter of filters">
       <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary " id="dropdownBasic1" ngbDropdownToggle>Marke</button>
+        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{filter.name}}</button>
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">AUDI</button>
-          <button class="dropdown-item">BMW</button>
-          <button class="dropdown-item">MERCEDES</button>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
-      <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Erscheinungsjahr</button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">2010</button>
-          <button class="dropdown-item">2011</button>
-          <button class="dropdown-item">2012</button>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
-      <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Preis</button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">2010</button>
-          <button class="dropdown-item">2011</button>
-          <button class="dropdown-item">2012</button>
+          <button class="dropdown-item" *ngFor="let item of filter.data">{{item}}</button>
         </div>
       </div>
     </div>
