--- a/src/client/src/app/pages/anmelden/anmelden.component.html
+++ b/src/client/src/app/pages/anmelden/anmelden.component.html
@@ -8,7 +8,7 @@
           <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Name:</span>
         </div>
         <!--<input type="text" class="input-anmelden form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">-->
-        <input type="text" class="input-anmelden form-control" placeholder="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
+        <input type="text" class="input-anmelden form-control" placeholder="Benutzername" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
       </div> 
     </div>
 
@@ -22,9 +22,6 @@
     </div>
   </div>
 </div>
-<p>
-  {{passwort}}
-</p>
 
 <div *ngIf="loginmessage">
   <p>
@@ -33,6 +30,7 @@
     </ngb-alert>
   </p>
 </div>
+
 <div class="d-flex justify-content-center mt-3">
   <div class="d-flex flex-column">
     <div class="flex-row p-2 d-flex justify-content-center">
@@ -42,4 +40,3 @@
     </div>
   </div>
 </div> 
-   
