Registrieren: Status-Nachrichten erweitert

--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -5,6 +5,8 @@
     <section>
       <router-outlet></router-outlet>
     </section>
-    <app-footbar class="test-footbar"></app-footbar>
+    <div class="d-none d-sm-block">
+      <app-footbar class="test-footbar"></app-footbar>
+    </div>
   </div>
 </div>
