--- a/src/client/src/app/nav/nav.component.html
+++ b/src/client/src/app/nav/nav.component.html
@@ -9,10 +9,10 @@
           </h1> 
         </a>
         <div class="btn-group" role="group">
-          <a class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button" routerLink="/anmelden" (click)="updateTitle()" role="button">
+          <a class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button" routerLink="/anmelden" role="button">
             Anmelden
           </a>
-          <a class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button" routerLink="/registrieren"  role="button">
+          <a class="btn btn-outline-secondary menu-button-border menu-text-light menu-web-button" routerLink="/registrieren" role="button">
             Registrieren
           </a>
         </div>
