--- a/src/client/src/app/pages/registrieren/registrieren.component.html
+++ b/src/client/src/app/pages/registrieren/registrieren.component.html
@@ -42,11 +42,13 @@
 </div>
 
 <div *ngIf="registrmessage">
-  <p>
-    <ngb-alert type="{{type}}" [dismissible]="false">
-      <strong>{{registrmessage}}</strong>
-    </ngb-alert>
-  </p>
+  <div class="d-flex justify-content-center mt-3">
+    <p>
+      <ngb-alert type="{{type}}" [dismissible]="false">
+        <strong>{{registrmessage}}</strong>
+      </ngb-alert>
+    </p>
+  </div>
 </div>
 <div class="d-flex justify-content-center mt-3">
   <div class="d-flex flex-column">
