--- a/src/client/src/app/pages/registrieren/registrieren.component.scss
+++ b/src/client/src/app/pages/registrieren/registrieren.component.scss
@@ -10,3 +10,9 @@
 .menu-text-dark{
     color: #666666;
 }
+.label-backgrnd-success-regist{
+    background-color: #d4eddb;
+}
+.label-backgrnd-danger-regist{
+    background-color: #f8d7da;
+}
