--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -5,8 +5,9 @@
     <section>
       <router-outlet></router-outlet>
     </section>
+    
     <div class="d-none d-sm-block">
-      <app-footbar class="test-footbar"></app-footbar>
+      <app-footbar class="footbar-display"></app-footbar>
     </div>
   </div>
 </div>
