--- a/src/client/src/app/pages/autos/autos.component.scss
+++ b/src/client/src/app/pages/autos/autos.component.scss
@@ -21,3 +21,12 @@ p {
   font-size: 1.5em;
   text-align: center;
 }
+
+.star {
+  font-size: 3rem;
+  color: #b0c4de;
+}
+.filled {
+  color: #ffe700;
+}
+
