--- a/src/client/src/app/main/main.component.html
+++ b/src/client/src/app/main/main.component.html
@@ -25,7 +25,6 @@
           <ng-template ngbSlide>
 
 
-
             <div class="col-xs-4"><a href="#1"><img [src]="images[3]"
                                                     class="img-responsive"></a></div>
             <div class="col-xs-4"><a href="#1"><img [src]="images[4]"
@@ -42,7 +41,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<!--Filter -->
+<!--Filter
 <div class="container">
   <div class="row" *ngIf="filters">
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center" *ngFor="let filter of filters">
@@ -51,6 +50,29 @@
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
           <button class="dropdown-item" *ngFor="let item of filter.data">{{item}}</button>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+-->
+
+<div class="container">
+  <div class="row" *ngIf="filters">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center" *ngFor="let filter of filters">
+      <div ngbDropdown class="d-inline-block">
+        <select id="{{filter.typ}}" name="{{filter.name}}" class="form-control btn btn-outline-primary">
+
+
+          <option *ngIf="filter.name == 'Preis'; else elseBlock">Bitte {{filter.name}} bis auswählen</option>
+          <ng-template #elseBlock>
+            <option>Bitte {{filter.name}} auswählen</option>
+          </ng-template>
+
+
+          <option *ngFor="let item of filter.data" value="{{filter.data}}">{{item}}</option>
+
+        </select>
+        <p>&nbsp;</p>
       </div>
     </div>
   </div>
