Änderungen bei den Filtern für die Hauptseite

--- a/src/client/src/app/main/main.component.html
+++ b/src/client/src/app/main/main.component.html
@@ -56,41 +56,68 @@
 </div>
 -->
 
+
 <div class="container">
   <div class="row" *ngIf="filters">
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center" *ngFor="let filter of filters">
       <div ngbDropdown class="d-inline-block">
-        <select id="{{filter.typ}}" name="{{filter.name}}" class="form-control btn btn-outline-primary">
 
+        <select class="btn btn-outline-primary">
 
+          <!-- Bitte auswählen Dialoge -->
           <option *ngIf="filter.name == 'Preis'; else elseBlock">Bitte {{filter.name}} bis auswählen</option>
           <ng-template #elseBlock>
             <option>Bitte {{filter.name}} auswählen</option>
           </ng-template>
 
-
-          <option *ngFor="let item of filter.data" value="{{filter.data}}">{{item}}</option>
-
+          <!-- Inhalte für Hersteller, Erscheinungsjahr und Preis -->
+          <option *ngFor="let item of filter.data">
+            {{item}}
+          </option>
         </select>
+
         <p>&nbsp;</p>
+
       </div>
     </div>
   </div>
 </div>
 
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
+
+
+
+<div class="container">
+  <div class="row" *ngIf="filters">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center" *ngFor="let filter of filters">
+      <div ngbDropdown class="d-inline-block">
+
+
+          <select  name="suche" [(ngModel)]="suche" (change)="onChange(suche)">
+            <!-- Inhalte für Hersteller, Erscheinungsjahr und Preis -->
+            <option *ngFor="let item of filter.data" value={{item}} >
+              {{item}}
+            </option>
+          </select>
+
+        </div>
+     </div>
+    </div>
+  </div>
+
 
 <!-- Suchen Button -->
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <button type="button" class="btn btn-secondary">Suchen</button>
+      <button type="button" class="btn btn-secondary" (click)="process()">Suchen</button>
     </div>
   </div>
 </div>
-
 <p>&nbsp;</p>
+
 
 <!-- Erweiterte Suche Button -->
 <div class="container">
