Autos seite aussehen verändert

--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -6,10 +6,17 @@
         <img [src]="image"
              class="img-responsive" alt="Thumbnail Image 1">
         <div class="caption">
-          <h1>Heading</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h1>Modellname</h1>
+        </div>
+        <hr>
+        <div>
+          <h2>Leistung in kW:</h2>
+          <h2>Reichweite in Km:</h2>
+          <h2>Ladedauer in Stunden:</h2>
+          <h2>Preis in €:</h2>
+
           <hr>
-          <!--Bewertungen -->
+          <!--Bewertungen
           <p>Bewertungen: <b>{{currentRate}}</b></p>
           <ngb-rating [(rate)]="currentRate" max="5">
             <ng-template let-fill="fill" let-index="index">
@@ -18,9 +25,11 @@
           </ngb-rating>
           <hr>
           <p class="text-center"><a href="#" class="btn btn-success" role="button">Details</a></p>
+
+        -->
+
         </div>
       </div>
     </div>
-
   </div>
 </div>
