--- a/src/client/src/app/pages/autos/autos.component.scss
+++ b/src/client/src/app/pages/autos/autos.component.scss
@@ -11,6 +11,14 @@ h1 {
 }
 
 
+h2 {
+  color: lightslategrey;
+  font-size: 1.0em;
+  text-align: left;
+  padding: 10px;
+}
+
+
 img {
   width: 90%;
   padding: 10px;
