--- a/src/client/src/app/main/main.component.html
+++ b/src/client/src/app/main/main.component.html
@@ -18,30 +18,30 @@
 
           <ng-template ngbSlide>
             <div class="col-xs-4"><a href="#1"><img
-              src="../../assets/autobilder/egolf.jpg"
+              src="./assets/autobilder/egolf.jpg"
               class="img-responsive"></a></div>
 
             <div class="col-xs-4"><a href="#1"><img
-              src="../../assets/autobilder/etron.jpg"
+              src="./assets/autobilder/etron.jpg"
               class="img-responsive"></a></div>
 
             <div class="col-xs-4"><a href="#1"><img
-              src="../../assets/autobilder/reanualtzoe.jpg"
+              src="./assets/autobilder/reanualtzoe.jpg"
               class="img-responsive"></a></div>
           </ng-template>
 
           <ng-template ngbSlide>
 
             <div class="col-xs-4"><a href="#1"><img
-              src="../../assets/autobilder/hyundaiionic.jpg"
+              src="./assets/autobilder/hyundaiionic.jpg"
               class="img-responsive"></a></div>
 
             <div class="col-xs-4"><a href="#1"><img
-              src="../../assets/autobilder/teslahero.jpg"
+              src="./assets/autobilder/teslahero.jpg"
               class="img-responsive"></a></div>
 
             <div class="col-xs-4"><a href="#1"><img
-              src="../../assets/autobilder/twizy.jpg"
+              src="./assets/autobilder/twizy.jpg"
               class="img-responsive"></a></div>
 
             <!--
