--- a/src/client/src/app/pages/autos/autos.component.scss
+++ b/src/client/src/app/pages/autos/autos.component.scss
@@ -6,8 +6,9 @@ caption {
 
 h1 {
   color: grey;
-  font-size: 2.5em;
+  font-size: 3.0vh;
   text-align: center;
+  white-space: nowrap;
 }
 
 
@@ -20,13 +21,13 @@ h2 {
 
 
 img {
-  width: 90%;
-  padding: 10px;
+  height: 200px;
+  width: 100%;
 }
 
 p {
   color: slategrey;
-  font-size: 1.5em;
+  font-size: 2.5em;
   text-align: center;
 }
 
@@ -34,6 +35,7 @@ p {
   font-size: 3rem;
   color: #b0c4de;
 }
+
 .filled {
   color: #ffe700;
 }
