--- a/src/client/src/app/main/main.component.scss
+++ b/src/client/src/app/main/main.component.scss
@@ -11,9 +11,14 @@ h1 {
 }
 
 img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.img-container {
+  padding: 10px;
   float: left;
   width: 33.33%;
-  padding: 10px;
-  heigth: 100%;
-
+  height: 100%;
 }
