--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -3,8 +3,9 @@
     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6" *ngFor="let auto of autos">
 
       <div class="thumbnail text-center">
-        <img [src]="auto.image"
-             class=" img-responsive" alt="Thumbnail Image 1">
+        <div class="img-container">
+          <img [src]="auto.image" class=" img-responsive" alt="Thumbnail Image {{auto.modelname}}">
+        </div>
 
         <hr>
 
