Filter Design Hauptseite geändert. Main Componente in Pages verschoben.

--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -11,7 +11,7 @@
 
         <div class="caption">
           <div style="width: 100%;   margin: fill;">
-            <h1>{{auto.modelname}}</h1>
+            <h1 > <abbr>{{auto.modelname}} </abbr> </h1>
           </div>
         </div>
 
