--- a/src/client/src/app/pages/autos/autos.component.scss
+++ b/src/client/src/app/pages/autos/autos.component.scss
@@ -6,9 +6,13 @@ caption {
 
 h1 {
   color: grey;
-  font-size: 3.0vh;
+  font-size: 2.0em;
   text-align: center;
   white-space: nowrap;
+
+
+
+
 }
 
 
