--- a/src/client/src/app/pages/main/main.component.html
+++ b/src/client/src/app/pages/main/main.component.html
@@ -10,7 +10,7 @@
   <!--Bilderkarussell -->
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-lg-12">
         <!--
          <ngb-carousel *ngIf="images">
            -->
@@ -19,7 +19,7 @@
           <ng-template ngbSlide>
             <div class="col-xs-4 img-container"><a href="#1"><img
               src="./assets/autobilder/egolf.jpg"
-              class="img-responsive"></a></div>
+              class="img-responsive" style="margin-right: 10px"></a></div>
 
             <div class="col-xs-4 img-container"><a href="#1"><img
               src="./assets/autobilder/etron.jpg"
@@ -32,9 +32,9 @@
 
           <ng-template ngbSlide>
 
-            <div class="col-xs-4 img-container"><a href="#1"><img
-              src="./assets/autobilder/hyundaiionic.jpg"
-              class="img-responsive"></a></div>
+            <div class="col-xs-4 img-container"><a href="#1">
+              <img src="./assets/autobilder/hyundaiionic.jpg"
+                   class="img-responsive"></a></div>
 
             <div class="col-xs-4 img-container"><a href="#1"><img
               src="./assets/autobilder/teslahero.jpg"
@@ -76,10 +76,10 @@
 
 <div class="container">
   <div class="row" *ngIf="filters">
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center" *ngFor="let filter of filters">
-      <div ngbDropdown class="d-inline-block">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" *ngFor="let filter of filters">
+      <div ngbDropdown class="d-inline-block but">
 
-        <select class="btn btn-outline-primary" (input)="onChange(filter.id, $event.target.value)">
+        <select class="btn btn-secondary but" (input)="onChange(filter.id, $event.target.value)">
 
           <!-- Bitte auswählen Dialoge -->
           <option value="" *ngIf="filter.name == 'Preis'; else elseBlock">Bitte {{filter.name}} bis auswählen</option>
